# django-pdm

./: README.md  pyproject.toml
blog/: admin.py  models.py  settings.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: detail.html  index.html
resource_library/: admin.py  filters.py  models.py  urls.py  views.py
resource_library/migrations/: 0001_initial.py  0002_alter_resource_link.py
resource_library/templates/resource_library/: detail.html  index.html
src/pdm_django/: pdm-django.code-workspace
templates/: base.html
