[project]
name = "pdm-django"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jack Garratt", email = "jack.garratt@icfnext.com"},
]
dependencies = [
    "Django==5.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
