[project]
name = "pdm-django"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jack Garratt", email = "jack.garratt@icfnext.com"},
]
dependencies = [
    "Django==5.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.scripts]
django_init = "django-admin startproject blog"
django_migrate = "python manage.py migrate"
django_start = "python manage.py runserver"
post_init = { composite = ["pdm install", "migrate", "start"] }